--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,7 +101,7 @@ papertitle {
 }
 
 name {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-family: sans-serif, 'Lato', Verdana, Helvetica;
   font-size: 32px;
 }
 
